SqlParser.py
# Generated from Sql.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SqlParser ( Parser ):

    grammarFileName = "Sql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'CREATE'", "'table'", "'('", "')'", 
                     "','", "':'", "'string'", "'int'", "'INSERT'", "'INTO'", 
                     "'SELECT'", "'*'", "'FROM'", "'WHERE'", "'OR'", "'AND'", 
                     "<INVALID>", "<INVALID>", "'='", "'>'", "'<'", "'>='", 
                     "'<='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "VAL", "OP", "EQ", "GR", 
                      "LS", "GEQ", "LEQ", "NEQ", "ID", "INT", "STRING", 
                      "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_stmt = 2
    RULE_create_stmt = 3
    RULE_column_list = 4
    RULE_column_spec = 5
    RULE_column_type = 6
    RULE_insert_stmt = 7
    RULE_select_stmt = 8
    RULE_cond = 9

    ruleNames =  [ "prog", "expr", "stmt", "create_stmt", "column_list", 
                   "column_spec", "column_type", "insert_stmt", "select_stmt", 
                   "cond" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    VAL=18
    OP=19
    EQ=20
    GR=21
    LS=22
    GEQ=23
    LEQ=24
    NEQ=25
    ID=26
    INT=27
    STRING=28
    COMMENT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SqlParser.ExprContext,0)


        def EOF(self):
            return self.getToken(SqlParser.EOF, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SqlParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.expr()
            self.state = 21
            self.match(SqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.StmtContext)
            else:
                return self.getTypedRuleContext(SqlParser.StmtContext,i)


        def getRuleIndex(self):
            return SqlParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SqlParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 5124) != 0:
                self.state = 23
                self.stmt()
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_stmt(self):
            return self.getTypedRuleContext(SqlParser.Create_stmtContext,0)


        def insert_stmt(self):
            return self.getTypedRuleContext(SqlParser.Insert_stmtContext,0)


        def select_stmt(self):
            return self.getTypedRuleContext(SqlParser.Select_stmtContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = SqlParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 29
                self.create_stmt()
                pass
            elif token in [10]:
                self.state = 30
                self.insert_stmt()
                pass
            elif token in [12]:
                self.state = 31
                self.select_stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.match(SqlParser.T__0)
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SqlParser.ID, 0)

        def column_list(self):
            return self.getTypedRuleContext(SqlParser.Column_listContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_create_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_stmt" ):
                listener.enterCreate_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_stmt" ):
                listener.exitCreate_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_stmt" ):
                return visitor.visitCreate_stmt(self)
            else:
                return visitor.visitChildren(self)




    def create_stmt(self):

        localctx = SqlParser.Create_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_create_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(SqlParser.T__1)
            self.state = 40
            self.match(SqlParser.T__2)
            self.state = 41
            self.match(SqlParser.ID)
            self.state = 42
            self.match(SqlParser.T__3)
            self.state = 43
            self.column_list()
            self.state = 44
            self.match(SqlParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.Column_specContext)
            else:
                return self.getTypedRuleContext(SqlParser.Column_specContext,i)


        def getRuleIndex(self):
            return SqlParser.RULE_column_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_list" ):
                listener.enterColumn_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_list" ):
                listener.exitColumn_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn_list" ):
                return visitor.visitColumn_list(self)
            else:
                return visitor.visitChildren(self)




    def column_list(self):

        localctx = SqlParser.Column_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_column_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.column_spec()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 47
                self.match(SqlParser.T__5)
                self.state = 48
                self.column_spec()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SqlParser.ID, 0)

        def column_type(self):
            return self.getTypedRuleContext(SqlParser.Column_typeContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_column_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_spec" ):
                listener.enterColumn_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_spec" ):
                listener.exitColumn_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn_spec" ):
                return visitor.visitColumn_spec(self)
            else:
                return visitor.visitChildren(self)




    def column_spec(self):

        localctx = SqlParser.Column_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_column_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SqlParser.ID)
            self.state = 55
            self.match(SqlParser.T__6)
            self.state = 56
            self.column_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SqlParser.RULE_column_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_type" ):
                listener.enterColumn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_type" ):
                listener.exitColumn_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn_type" ):
                return visitor.visitColumn_type(self)
            else:
                return visitor.visitChildren(self)




    def column_type(self):

        localctx = SqlParser.Column_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_column_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SqlParser.ID, 0)

        def VAL(self, i:int=None):
            if i is None:
                return self.getTokens(SqlParser.VAL)
            else:
                return self.getToken(SqlParser.VAL, i)

        def getRuleIndex(self):
            return SqlParser.RULE_insert_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_stmt" ):
                listener.enterInsert_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_stmt" ):
                listener.exitInsert_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_stmt" ):
                return visitor.visitInsert_stmt(self)
            else:
                return visitor.visitChildren(self)




    def insert_stmt(self):

        localctx = SqlParser.Insert_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_insert_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SqlParser.T__9)
            self.state = 61
            self.match(SqlParser.T__10)
            self.state = 62
            self.match(SqlParser.ID)
            self.state = 63
            self.match(SqlParser.T__3)
            self.state = 64
            self.match(SqlParser.VAL)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 65
                self.match(SqlParser.T__5)
                self.state = 66
                self.match(SqlParser.VAL)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(SqlParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SqlParser.ID)
            else:
                return self.getToken(SqlParser.ID, i)

        def cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.CondContext)
            else:
                return self.getTypedRuleContext(SqlParser.CondContext,i)


        def getRuleIndex(self):
            return SqlParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_stmt" ):
                return visitor.visitSelect_stmt(self)
            else:
                return visitor.visitChildren(self)




    def select_stmt(self):

        localctx = SqlParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_select_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SqlParser.T__11)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.state = 75
                self.match(SqlParser.ID)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 76
                    self.match(SqlParser.T__5)
                    self.state = 77
                    self.match(SqlParser.ID)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [13]:
                self.state = 83
                self.match(SqlParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 86
            self.match(SqlParser.T__13)
            self.state = 87
            self.match(SqlParser.ID)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 88
                self.match(SqlParser.T__14)
                self.state = 89
                self.cond()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16 or _la==17:
                    self.state = 90
                    _la = self._input.LA(1)
                    if not(_la==16 or _la==17):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 91
                    self.cond()
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SqlParser.ID, 0)

        def VAL(self):
            return self.getToken(SqlParser.VAL, 0)

        def OP(self):
            return self.getToken(SqlParser.OP, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)




    def cond(self):

        localctx = SqlParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SqlParser.ID)

            self.state = 103
            self.match(SqlParser.OP)
            self.state = 104
            self.match(SqlParser.VAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





